various updates  - remove accidentally added out files  - fix static-source-loader (was erroneously replacing with groups)  - add wait ticker to tracker text  - fix fonts protocol error when over https  - add serve file for local testing  - add socket.io namespacing for personal-router usage

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -31,7 +31,7 @@ h1 {
 
 p, label, input {
 	color: #333;
-	font-size: 26px;	
+	font-size: 26px;
 }
 
 p.description {
@@ -104,4 +104,20 @@ input {
 	text-align: right;
 	font-size: 16px;
 	color: #999;
+}
+
+.wait0:after, .wait1:after, .wait2:after, .wait3:after {
+	position: absolute;
+}
+.wait0:after {
+	content: '';
+}
+.wait1:after {
+	content: '.';
+}
+.wait2:after {
+	content: '..';
+}
+.wait3:after {
+	content: '...';
 }
